# sidequest

./: .gitconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
defaults/prompts/: action_grind.txt  action_quest.txt  task_template.md  work_delegation.txt
src/: config.rs  daemon.rs  harvester.rs  lib.rs  loot.rs  main.rs  prompts.rs  runtime.rs  scanner.rs  scheduler.rs  spawner.rs  state.rs  status.rs
src/daemon/: workspace.rs
src/oracle/: claude.rs  codex.rs  mod.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/tui/: init.rs  loot.rs  mod.rs  status.rs
